Including fixes for zooming flicker

--- a/media/assets/css/app/app4.css
+++ b/media/assets/css/app/app4.css
@@ -47,7 +47,7 @@ li {
 
 body {
   font: 16px 'Monaco', serif;
-  -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: subpixel-antialiased;
 
   background: #D8D5D2;
   color: #ededed;
@@ -443,6 +443,7 @@ p {
    background-repeat: repeat;
 
     -webkit-backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;
 }
 
 
@@ -450,11 +451,12 @@ p {
 
 #wall {
     -webkit-backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;
 }
 
 .title {
-    width: 115px;
-    height: 170px;
+    width: 120px;
+    height: 180px;
 
     -webkit-backface-visibility: hidden;
     background-size: cover;
@@ -462,11 +464,18 @@ p {
 
 .tile img {
     position: absolute;
-    -webkit-backface-visibility: hidden;
     background-size: cover;
 
-    width: 110px;
-    height: 165px;
+    width: 120px;
+    height: 180px;
+
+    -webkit-backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;
+
+    -webkit-transform-origin:       50% 50%;
+        -moz-transform-origin:      50% 50%;
+        -o-transform-origin:        50% 50%;
+          transform-origin:         50% 50%;
 
     -webkit-transition-duration: 0.25s;
        -moz-transition-duration: 0.25s;
@@ -478,18 +487,20 @@ p {
          -o-transition-property: transform, -webkit-transform;
             transition-property: transform, -webkit-transform;
 
+    /*
     -webkit-box-shadow:  0px 0px 20px #000;
         -moz-box-shadow: 0px 0px 20px #000;
         -o-box-shadow: 0px 0px 20px #000;
            box-shadow: 0px 0px 20px #000;
+           */
 }
 
 .tile img:hover {
-
+    perspective: 1000px;
     z-index: 15;
 
-    transform: scale(1.05);
-    -webkit-transform:  scale(1.2) translate(-10px,-10px); /* prefixo para browsers webkit */
-    -moz-transform:     scale(1.2) translate(-4px,-5px); /* prefixo para browsers gecko */
-    -o-transform:       scale(1.2) translate(-4px,-5px);
+    transform:          scale(1.2,1.2 );
+    -webkit-transform:  scale(1.2,1.2 );
+    -moz-transform:     scale(1.2,1.2 );
+    -o-transform:       scale(1.2,1.2 );
 }
